--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.ar.sceneform.plugin'
 
+sceneform.asset(
+        'sampledata/models/Beedrill_Animation.fbx',
+        'default',
+        'sampledata/models/Beedrill_Animation.sfa',
+        'src/main/res/raw/beedrill',
+        ['sampledata/models/Beedrill_Animation.fbx']
+)
+
+
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.3"
@@ -40,13 +49,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
     //Provides ARCore Session and related resources.
     implementation 'com.google.ar:core:1.22.0'
     // Provides ArFragment, and other UX resources.
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
     // Alternatively, use ArSceneView without the UX dependency.
     implementation 'com.google.ar.sceneform:core:1.17.1'
+
+    implementation "com.google.ar.sceneform:animation:1.17.1"
 
     //Android libs
     implementation 'com.google.android.material:material:1.3.0-beta01'
